--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("./assets/Imagem Hello World.png");
+    background-image: url("./img/Imagem Hello World.png");
     background-size: cover;
     color: white;              /* Texto branco para contrastar */
     min-height: 100vh;         /* Garante que o fundo ocupe a tela toda */
@@ -37,14 +37,14 @@ body {
     border-radius: 50%; /* Faz a imagem ficar redonda */
     border: 2px solid whitesmoke;
     object-fit: cover; /* Garante que a foto não amasse */
-    margin: 0px 49px 0px 49px;
+    margin-left: 60px;
 
 }
 
 .part1_cont h1{
     font-size: 35px;
     font-weight: 1000;
-    margin: 25px 40px 0px 40px;
+    margin: 25px 0px 0px 50px;
 }
 
 .part1_cont p{
@@ -99,8 +99,16 @@ button:hover {
         margin-left: 90px;
     }
 
+    .part1_cont h1{
+        margin-left: 35px;
+    }
+
+    .part1_cont p{
+        font-size: 20px;
+    }
+
     button{
-        width: 180px;        /* Botões se ajustam melhor à largura do card */
+        width: 280px;        /* Botões se ajustam melhor à largura do card */
     }
 }
 
